2012-12-06  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m: Improve handling of signals ... quit process after the
        next event when an unexpected signal is caught.

2012-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m:
2012-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* EcLogger.m (+loggerForType): Fix wrong receiver when registering
	for notifications.

2012-11-16  Richard Frith-Macdonald <rfm@gnu.org>

        * EcControl.m: Record a change in the alerter configuration as an
        update of the overall configuration.
        * EcProcess.m: Implement 'alarms' and 'clear' commands for local
        process alarm state.

2012-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcCommand.m:
	* EcConsole.m:
	* EcControl.m:
	* EcLogger.m:
	* EcProcess.h:
	* EcProcess.m:
	Use NSInteger argument for -cmdQuit:
	
2012-10-18  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.m: Remove unused variable.
        * EcControl.m: Yse -hostWithWellKnownName: in preference to
        -hostWithName: when trying to find/match hosts.

2012-10-05  Richard Frith-Macdonald <rfm@gnu.org>

        Initial (1.0) release.
