@@ -1,3 +1,9 @@
+2012-12-07  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * EcAlarmSinkSNMP.m:
+        * GNUSTEP-MIB.txt:
+        Fix minor naming consistency errors.
+
 2012-12-06  Richard Frith-Macdonald <rfm@gnu.org>
 
         * EcProcess.m: Improve handling of signals ... quit process after the
